--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     <link rel='stylesheet' href='./global.css'>
     <link rel='stylesheet' href='./build/bundle.css'>
 
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon.png">
+
     <script defer src='./build/bundle.js'></script>
 </head>
 
