--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 
 		
 
-		<link rel="modulepreload" href="/./_app/start-16a65fe7.js">
-		<link rel="modulepreload" href="/./_app/chunks/vendor-874d265a.js">
-		<link rel="modulepreload" href="/./_app/layout.svelte-6bc4cf6c.js">
-		<link rel="modulepreload" href="/./_app/pages/index.svelte-267bf9c0.js">
-		<link rel="stylesheet" href="/./_app/assets/start-a8cd1609.css">
-		<link rel="stylesheet" href="/./_app/assets/vendor-f990add9.css">
-		<link rel="stylesheet" href="/./_app/assets/pages/index.svelte-7a7ba682.css">
+		<link rel="modulepreload" href="/cross-code-review/_app/start-16a65fe7.js">
+		<link rel="modulepreload" href="/cross-code-review/_app/chunks/vendor-874d265a.js">
+		<link rel="modulepreload" href="/cross-code-review/_app/layout.svelte-6bc4cf6c.js">
+		<link rel="modulepreload" href="/cross-code-review/_app/pages/index.svelte-267bf9c0.js">
+		<link rel="stylesheet" href="/cross-code-review/_app/assets/start-a8cd1609.css">
+		<link rel="stylesheet" href="/cross-code-review/_app/assets/vendor-f990add9.css">
+		<link rel="stylesheet" href="/cross-code-review/_app/assets/pages/index.svelte-7a7ba682.css">
 
 		<script type="module">
-			import { start } from "/./_app/start-16a65fe7.js";
+			import { start } from "/cross-code-review/_app/start-16a65fe7.js";
 			start({
 				target: document.body,
-				paths: {"base":"","assets":"/."},
+				paths: {"base":"/cross-code-review","assets":"/cross-code-review"},
 				session: {},
 				host: location.host,
 				route: true,
@@ -32,8 +32,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/./_app/layout.svelte-6bc4cf6c.js"),
-						import("/./_app/pages/index.svelte-267bf9c0.js")
+						import("/cross-code-review/_app/layout.svelte-6bc4cf6c.js"),
+						import("/cross-code-review/_app/pages/index.svelte-267bf9c0.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
