--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/favicon.png" />
-  <link rel="stylesheet" href="/style.css">
+  <link rel="icon" href="./favicon.png" />
+  <link rel="stylesheet" href="./style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   
 
