--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="./favicon.png" />
   <link rel="stylesheet" href="./style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  %svelte.head%
+  <title>Ревью</title>
 </head>
 
 <body>
