--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
   <link rel="icon" href="./favicon.png" />
   <link rel="stylesheet" href="./style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Ревью</title>
   
 
 		
 
-		<link rel="modulepreload" href="/cross-code-review/_app/start-16a65fe7.js">
+		<link rel="modulepreload" href="/cross-code-review/_app/start-afe140b6.js">
 		<link rel="modulepreload" href="/cross-code-review/_app/chunks/vendor-874d265a.js">
 		<link rel="modulepreload" href="/cross-code-review/_app/layout.svelte-6bc4cf6c.js">
-		<link rel="modulepreload" href="/cross-code-review/_app/pages/index.svelte-267bf9c0.js">
+		<link rel="modulepreload" href="/cross-code-review/_app/pages/index.svelte-9c138f7e.js">
 		<link rel="stylesheet" href="/cross-code-review/_app/assets/start-a8cd1609.css">
 		<link rel="stylesheet" href="/cross-code-review/_app/assets/vendor-f990add9.css">
 		<link rel="stylesheet" href="/cross-code-review/_app/assets/pages/index.svelte-7a7ba682.css">
 
 		<script type="module">
-			import { start } from "/cross-code-review/_app/start-16a65fe7.js";
+			import { start } from "/cross-code-review/_app/start-afe140b6.js";
 			start({
 				target: document.body,
 				paths: {"base":"/cross-code-review","assets":"/cross-code-review"},
@@ -33,7 +34,7 @@
 					error: null,
 					nodes: [
 						import("/cross-code-review/_app/layout.svelte-6bc4cf6c.js"),
-						import("/cross-code-review/_app/pages/index.svelte-267bf9c0.js")
+						import("/cross-code-review/_app/pages/index.svelte-9c138f7e.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -89,8 +90,8 @@
     </div>
 </div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">11</button>
     </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">12</button>
-    </div><div class="day svelte-1f2gkwh  is-today"><button class="day--label svelte-1f2gkwh selected highlighted" type="button">13</button>
-    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">14</button>
+    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">13</button>
+    </div><div class="day svelte-1f2gkwh  is-today"><button class="day--label svelte-1f2gkwh selected highlighted" type="button">14</button>
     </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">15</button>
     </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">16</button>
     </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">17</button>
@@ -128,19 +129,23 @@
   <div class="pairs  svelte-c1xe7s"><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13" xmlns="http://www.w3.org/2000/svg"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Макриди Екатерина</span>
     <span class="pair-arrow svelte-9c226o"></span></div>
-  <div>Хрустик Михаил</div>
+  <div>Колодько Денис</div>
 </div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13" xmlns="http://www.w3.org/2000/svg"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Туичиев Алексей</span>
     <span class="pair-arrow svelte-9c226o"></span></div>
-  <div>Макриди Екатерина</div>
+  <div>Хрустик Михаил</div>
 </div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13" xmlns="http://www.w3.org/2000/svg"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Колодько Денис</span>
     <span class="pair-arrow svelte-9c226o"></span></div>
-  <div>Туичиев Алексей</div>
+  <div>Орлов Максим</div>
 </div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13" xmlns="http://www.w3.org/2000/svg"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Хрустик Михаил</span>
     <span class="pair-arrow svelte-9c226o"></span></div>
-  <div>Колодько Денис</div>
+  <div>Макриди Екатерина</div>
+</div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13" xmlns="http://www.w3.org/2000/svg"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
+  <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Орлов Максим</span>
+    <span class="pair-arrow svelte-9c226o"></span></div>
+  <div>Туичиев Алексей</div>
 </div></div>
 </main>
 
