--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
     </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">24</button>
     </div>
 </div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">25</button>
-    </div><div class="day svelte-1f2gkwh  is-today"><button class="day--label svelte-1f2gkwh selected highlighted" type="button">26</button>
-    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">27</button>
+    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">26</button>
+    </div><div class="day svelte-1f2gkwh  is-today"><button class="day--label svelte-1f2gkwh selected highlighted" type="button">27</button>
     </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">28</button>
     </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">29</button>
     </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">30</button>
@@ -129,23 +129,23 @@
   <div class="pairs  svelte-c1xe7s"><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13" xmlns="http://www.w3.org/2000/svg"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Макриди Екатерина</span>
     <span class="pair-arrow svelte-9c226o"></span></div>
-  <div>Колодько Денис</div>
+  <div>Хрустик Михаил</div>
 </div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13" xmlns="http://www.w3.org/2000/svg"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Туичиев Алексей</span>
     <span class="pair-arrow svelte-9c226o"></span></div>
-  <div>Хрустик Михаил</div>
+  <div>Орлов Максим</div>
 </div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13" xmlns="http://www.w3.org/2000/svg"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Колодько Денис</span>
     <span class="pair-arrow svelte-9c226o"></span></div>
-  <div>Орлов Максим</div>
+  <div>Макриди Екатерина</div>
 </div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13" xmlns="http://www.w3.org/2000/svg"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Хрустик Михаил</span>
     <span class="pair-arrow svelte-9c226o"></span></div>
-  <div>Макриди Екатерина</div>
+  <div>Туичиев Алексей</div>
 </div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13" xmlns="http://www.w3.org/2000/svg"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Орлов Максим</span>
     <span class="pair-arrow svelte-9c226o"></span></div>
-  <div>Туичиев Алексей</div>
+  <div>Колодько Денис</div>
 </div></div>
 </main>
 
