deploy: a0329ec7a73ade08bd832b41f55cf520eec87be9

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
 		
 
-		<link rel="modulepreload" href="/cross-code-review/_app/start-afe140b6.js">
+		<link rel="modulepreload" href="/cross-code-review/_app/start-50fa92bb.js">
 		<link rel="modulepreload" href="/cross-code-review/_app/chunks/vendor-874d265a.js">
 		<link rel="modulepreload" href="/cross-code-review/_app/layout.svelte-6bc4cf6c.js">
-		<link rel="modulepreload" href="/cross-code-review/_app/pages/index.svelte-9c138f7e.js">
+		<link rel="modulepreload" href="/cross-code-review/_app/pages/index.svelte-9f194ce6.js">
 		<link rel="stylesheet" href="/cross-code-review/_app/assets/start-a8cd1609.css">
 		<link rel="stylesheet" href="/cross-code-review/_app/assets/vendor-f990add9.css">
 		<link rel="stylesheet" href="/cross-code-review/_app/assets/pages/index.svelte-7a7ba682.css">
 
 		<script type="module">
-			import { start } from "/cross-code-review/_app/start-afe140b6.js";
+			import { start } from "/cross-code-review/_app/start-50fa92bb.js";
 			start({
 				target: document.body,
 				paths: {"base":"/cross-code-review","assets":"/cross-code-review"},
@@ -34,7 +34,7 @@
 					error: null,
 					nodes: [
 						import("/cross-code-review/_app/layout.svelte-6bc4cf6c.js"),
-						import("/cross-code-review/_app/pages/index.svelte-9c138f7e.js")
+						import("/cross-code-review/_app/pages/index.svelte-9f194ce6.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -55,7 +55,7 @@
     <span class="svelte-1p5z8n1"><div class="datepicker svelte-1lorc63" style="\n    --button-background-color: #fff;\n    --button-border-color: #eee;\n    --button-text-color: #333;\n    --highlight-color: #f7901e;\n    --day-background-color: none;\n    --day-text-color: #4a4a4a;\n    --day-highlighted-background-color: #efefef;\n    --day-highlighted-text-color: #4a4a4a;\n    \n  ">
 <div class="sc-popover svelte-mc1z8c"><div class="trigger"><div slot="trigger" class="svelte-1lorc63"><button class="svelte-1p5z8n1">сегодня</button></div></div>
   <div class="contents-wrapper svelte-mc1z8c" style="transform: translate(-50%,-50%) translate(0px, 0px)"><div class="contents svelte-mc1z8c"><div class="contents-inner svelte-mc1z8c"><div slot="contents" class="svelte-1lorc63"><div class="calendar svelte-1lorc63"><div class="title"><div class="heading-section svelte-1dqf106"><div class="control svelte-1dqf106"><i class="arrow left svelte-1dqf106"></i></div>
-    <div class="label svelte-1dqf106">July 2021</div> 
+    <div class="label svelte-1dqf106">August 2021</div> 
     <div class="control svelte-1dqf106 enabled"><i class="arrow right svelte-1dqf106"></i></div></div>
   <div class="month-selector svelte-1dqf106"><div class="month-selector--month svelte-1dqf106"><span class="svelte-1dqf106">Jan</span>
       </div><div class="month-selector--month svelte-1dqf106"><span class="svelte-1dqf106">Feb</span>
@@ -63,8 +63,8 @@
       </div><div class="month-selector--month svelte-1dqf106"><span class="svelte-1dqf106">Apr</span>
       </div><div class="month-selector--month svelte-1dqf106"><span class="svelte-1dqf106">May</span>
       </div><div class="month-selector--month svelte-1dqf106"><span class="svelte-1dqf106">Jun</span>
-      </div><div class="month-selector--month svelte-1dqf106 selected selectable"><span class="svelte-1dqf106">Jul</span>
-      </div><div class="month-selector--month svelte-1dqf106  selectable"><span class="svelte-1dqf106">Aug</span>
+      </div><div class="month-selector--month svelte-1dqf106"><span class="svelte-1dqf106">Jul</span>
+      </div><div class="month-selector--month svelte-1dqf106 selected selectable"><span class="svelte-1dqf106">Aug</span>
       </div><div class="month-selector--month svelte-1dqf106  selectable"><span class="svelte-1dqf106">Sep</span>
       </div><div class="month-selector--month svelte-1dqf106  selectable"><span class="svelte-1dqf106">Oct</span>
       </div><div class="month-selector--month svelte-1dqf106"><span class="svelte-1dqf106">Nov</span>
@@ -72,53 +72,53 @@
       </div></div>
 </div>
         <div class="legend svelte-1lorc63"><span class="svelte-1lorc63">Sun</span><span class="svelte-1lorc63">Mon</span><span class="svelte-1lorc63">Tue</span><span class="svelte-1lorc63">Wed</span><span class="svelte-1lorc63">Thu</span><span class="svelte-1lorc63">Fri</span><span class="svelte-1lorc63">Sat</span></div>
-        <div class="month-container svelte-ny3kda"><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh outside-month  is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">27</button>
-    </div><div class="day svelte-1f2gkwh outside-month  is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">28</button>
-    </div><div class="day svelte-1f2gkwh outside-month  is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">29</button>
-    </div><div class="day svelte-1f2gkwh outside-month  is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">30</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">1</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">2</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">3</button>
+        <div class="month-container svelte-ny3kda"><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh  is-today"><button class="day--label svelte-1f2gkwh selected highlighted" type="button">1</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">2</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">3</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">4</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">5</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">6</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">7</button>
     </div>
-</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">4</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">5</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">6</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">7</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">8</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">9</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">10</button>
+</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">8</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">9</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">10</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">11</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">12</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">13</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">14</button>
     </div>
-</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">11</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">12</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">13</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">14</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">15</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">16</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">17</button>
+</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">15</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">16</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">17</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">18</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">19</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">20</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">21</button>
     </div>
-</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">18</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">19</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">20</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">21</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">22</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">23</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">24</button>
+</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">22</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">23</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">24</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">25</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">26</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">27</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">28</button>
     </div>
-</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">25</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">26</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">27</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">28</button>
-    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">29</button>
-    </div><div class="day svelte-1f2gkwh  is-today"><button class="day--label svelte-1f2gkwh selected highlighted" type="button">30</button>
+</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">29</button>
+    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">30</button>
     </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">31</button>
-    </div>
-</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">1</button>
+    </div><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">1</button>
     </div><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">2</button>
     </div><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">3</button>
     </div><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">4</button>
-    </div><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">5</button>
+    </div>
+</div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">5</button>
     </div><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">6</button>
     </div><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">7</button>
+    </div><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">8</button>
+    </div><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">9</button>
+    </div><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">10</button>
+    </div><div class="day svelte-1f2gkwh outside-month"><button class="day--label svelte-1f2gkwh" type="button">11</button>
     </div>
 </div>
 </div></div></div></div></div></div>
@@ -126,26 +126,26 @@
 </div>
 </span>?
   </h1>
-  <div class="pairs  svelte-c1xe7s"><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13" xmlns="http://www.w3.org/2000/svg"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
+  <div class="pairs  svelte-c1xe7s"><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Макриди Екатерина</span>
     <span class="pair-arrow svelte-9c226o"></span></div>
-  <div>Колодько Денис</div>
-</div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13" xmlns="http://www.w3.org/2000/svg"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
+  <div>Орлов Максим</div>
+</div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Туичиев Алексей</span>
     <span class="pair-arrow svelte-9c226o"></span></div>
-  <div>Хрустик Михаил</div>
-</div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13" xmlns="http://www.w3.org/2000/svg"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
+  <div>Макриди Екатерина</div>
+</div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Колодько Денис</span>
     <span class="pair-arrow svelte-9c226o"></span></div>
-  <div>Орлов Максим</div>
-</div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13" xmlns="http://www.w3.org/2000/svg"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
+  <div>Туичиев Алексей</div>
+</div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Хрустик Михаил</span>
     <span class="pair-arrow svelte-9c226o"></span></div>
-  <div>Макриди Екатерина</div>
-</div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13" xmlns="http://www.w3.org/2000/svg"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
+  <div>Колодько Денис</div>
+</div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Орлов Максим</span>
     <span class="pair-arrow svelte-9c226o"></span></div>
-  <div>Туичиев Алексей</div>
+  <div>Хрустик Михаил</div>
 </div></div>
 </main>
 
