deploy: a0329ec7a73ade08bd832b41f55cf520eec87be9

--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
       </div><div class="month-selector--month svelte-1dqf106 selected selectable"><span class="svelte-1dqf106">Aug</span>
       </div><div class="month-selector--month svelte-1dqf106  selectable"><span class="svelte-1dqf106">Sep</span>
       </div><div class="month-selector--month svelte-1dqf106  selectable"><span class="svelte-1dqf106">Oct</span>
-      </div><div class="month-selector--month svelte-1dqf106"><span class="svelte-1dqf106">Nov</span>
+      </div><div class="month-selector--month svelte-1dqf106  selectable"><span class="svelte-1dqf106">Nov</span>
       </div><div class="month-selector--month svelte-1dqf106"><span class="svelte-1dqf106">Dec</span>
       </div></div>
 </div>
         <div class="legend svelte-1lorc63"><span class="svelte-1lorc63">Sun</span><span class="svelte-1lorc63">Mon</span><span class="svelte-1lorc63">Tue</span><span class="svelte-1lorc63">Wed</span><span class="svelte-1lorc63">Thu</span><span class="svelte-1lorc63">Fri</span><span class="svelte-1lorc63">Sat</span></div>
         <div class="month-container svelte-ny3kda"><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">1</button>
-    </div><div class="day svelte-1f2gkwh  is-today"><button class="day--label svelte-1f2gkwh selected highlighted" type="button">2</button>
-    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">3</button>
+    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">2</button>
+    </div><div class="day svelte-1f2gkwh  is-today"><button class="day--label svelte-1f2gkwh selected highlighted" type="button">3</button>
     </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">4</button>
     </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">5</button>
     </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">6</button>
@@ -129,23 +129,23 @@
   <div class="pairs  svelte-c1xe7s"><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Макриди Екатерина</span>
     <span class="pair-arrow svelte-9c226o"></span></div>
-  <div>Туичиев Алексей</div>
+  <div>Колодько Денис</div>
 </div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Туичиев Алексей</span>
     <span class="pair-arrow svelte-9c226o"></span></div>
-  <div>Колодько Денис</div>
+  <div>Хрустик Михаил</div>
 </div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Колодько Денис</span>
     <span class="pair-arrow svelte-9c226o"></span></div>
-  <div>Хрустик Михаил</div>
+  <div>Орлов Максим</div>
 </div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Хрустик Михаил</span>
     <span class="pair-arrow svelte-9c226o"></span></div>
-  <div>Орлов Максим</div>
+  <div>Макриди Екатерина</div>
 </div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Орлов Максим</span>
     <span class="pair-arrow svelte-9c226o"></span></div>
-  <div>Макриди Екатерина</div>
+  <div>Туичиев Алексей</div>
 </div></div>
 </main>
 
