--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 
 		
 
-		<link rel="modulepreload" href="/cross-code-review/_app/start-89a218fd.js">
-		<link rel="modulepreload" href="/cross-code-review/_app/chunks/vendor-874d265a.js">
-		<link rel="modulepreload" href="/cross-code-review/_app/layout.svelte-6bc4cf6c.js">
-		<link rel="modulepreload" href="/cross-code-review/_app/pages/index.svelte-a230eb26.js">
-		<link rel="stylesheet" href="/cross-code-review/_app/assets/start-a8cd1609.css">
-		<link rel="stylesheet" href="/cross-code-review/_app/assets/vendor-f990add9.css">
-		<link rel="stylesheet" href="/cross-code-review/_app/assets/pages/index.svelte-7a7ba682.css">
+		<link rel="modulepreload" href="/code-cross-review/_app/start-89a218fd.js">
+		<link rel="modulepreload" href="/code-cross-review/_app/chunks/vendor-874d265a.js">
+		<link rel="modulepreload" href="/code-cross-review/_app/layout.svelte-6bc4cf6c.js">
+		<link rel="modulepreload" href="/code-cross-review/_app/pages/index.svelte-a230eb26.js">
+		<link rel="stylesheet" href="/code-cross-review/_app/assets/start-a8cd1609.css">
+		<link rel="stylesheet" href="/code-cross-review/_app/assets/vendor-f990add9.css">
+		<link rel="stylesheet" href="/code-cross-review/_app/assets/pages/index.svelte-7a7ba682.css">
 
 		<script type="module">
-			import { start } from "/cross-code-review/_app/start-89a218fd.js";
+			import { start } from "/code-cross-review/_app/start-89a218fd.js";
 			start({
 				target: document.body,
-				paths: {"base":"/cross-code-review","assets":"/cross-code-review"},
+				paths: {"base":"/code-cross-review","assets":"/code-cross-review"},
 				session: {},
 				host: location.host,
 				route: true,
@@ -33,8 +33,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/cross-code-review/_app/layout.svelte-6bc4cf6c.js"),
-						import("/cross-code-review/_app/pages/index.svelte-a230eb26.js")
+						import("/code-cross-review/_app/layout.svelte-6bc4cf6c.js"),
+						import("/code-cross-review/_app/pages/index.svelte-a230eb26.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
