deploy: bae7832b5278cf326d20a2867378e00f2fada77a

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
 		
 
-		<link rel="modulepreload" href="/code-cross-review/_app/start-89a218fd.js">
+		<link rel="modulepreload" href="/code-cross-review/_app/start-cb5325d6.js">
 		<link rel="modulepreload" href="/code-cross-review/_app/chunks/vendor-874d265a.js">
 		<link rel="modulepreload" href="/code-cross-review/_app/layout.svelte-6bc4cf6c.js">
-		<link rel="modulepreload" href="/code-cross-review/_app/pages/index.svelte-a230eb26.js">
+		<link rel="modulepreload" href="/code-cross-review/_app/pages/index.svelte-07f18f86.js">
 		<link rel="stylesheet" href="/code-cross-review/_app/assets/start-a8cd1609.css">
 		<link rel="stylesheet" href="/code-cross-review/_app/assets/vendor-f990add9.css">
-		<link rel="stylesheet" href="/code-cross-review/_app/assets/pages/index.svelte-7a7ba682.css">
+		<link rel="stylesheet" href="/code-cross-review/_app/assets/pages/index.svelte-226f95da.css">
 
 		<script type="module">
-			import { start } from "/code-cross-review/_app/start-89a218fd.js";
+			import { start } from "/code-cross-review/_app/start-cb5325d6.js";
 			start({
 				target: document.body,
 				paths: {"base":"/code-cross-review","assets":"/code-cross-review"},
@@ -34,7 +34,7 @@
 					error: null,
 					nodes: [
 						import("/code-cross-review/_app/layout.svelte-6bc4cf6c.js"),
-						import("/code-cross-review/_app/pages/index.svelte-a230eb26.js")
+						import("/code-cross-review/_app/pages/index.svelte-07f18f86.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -68,7 +68,7 @@
       </div><div class="month-selector--month svelte-1dqf106  selectable"><span class="svelte-1dqf106">Sep</span>
       </div><div class="month-selector--month svelte-1dqf106  selectable"><span class="svelte-1dqf106">Oct</span>
       </div><div class="month-selector--month svelte-1dqf106  selectable"><span class="svelte-1dqf106">Nov</span>
-      </div><div class="month-selector--month svelte-1dqf106"><span class="svelte-1dqf106">Dec</span>
+      </div><div class="month-selector--month svelte-1dqf106  selectable"><span class="svelte-1dqf106">Dec</span>
       </div></div>
 </div>
         <div class="legend svelte-1lorc63"><span class="svelte-1lorc63">Sun</span><span class="svelte-1lorc63">Mon</span><span class="svelte-1lorc63">Tue</span><span class="svelte-1lorc63">Wed</span><span class="svelte-1lorc63">Thu</span><span class="svelte-1lorc63">Fri</span><span class="svelte-1lorc63">Sat</span></div>
@@ -126,25 +126,25 @@
 </div>
 </span>?
   </h1>
-  <div class="pairs  svelte-c1xe7s"><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
-  <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Макриди Екатерина</span>
-    <span class="pair-arrow svelte-9c226o"></span></div>
+  <div class="pairs  svelte-c1xe7s"><div class="pair  svelte-1abzffh"><svg class="pin svelte-1abzffh" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
+  <div class="whom svelte-1abzffh"><span class="whomName svelte-1abzffh">Макриди Екатерина</span>
+    <span class="arrow svelte-1abzffh"></span></div>
   <div>Туичиев Алексей</div>
-</div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
-  <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Туичиев Алексей</span>
-    <span class="pair-arrow svelte-9c226o"></span></div>
+</div><div class="pair  svelte-1abzffh"><svg class="pin svelte-1abzffh" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
+  <div class="whom svelte-1abzffh"><span class="whomName svelte-1abzffh">Туичиев Алексей</span>
+    <span class="arrow svelte-1abzffh"></span></div>
   <div>Колодько Денис</div>
-</div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
-  <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Колодько Денис</span>
-    <span class="pair-arrow svelte-9c226o"></span></div>
+</div><div class="pair  svelte-1abzffh"><svg class="pin svelte-1abzffh" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
+  <div class="whom svelte-1abzffh"><span class="whomName svelte-1abzffh">Колодько Денис</span>
+    <span class="arrow svelte-1abzffh"></span></div>
   <div>Хрустик Михаил</div>
-</div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
-  <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Хрустик Михаил</span>
-    <span class="pair-arrow svelte-9c226o"></span></div>
+</div><div class="pair  svelte-1abzffh"><svg class="pin svelte-1abzffh" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
+  <div class="whom svelte-1abzffh"><span class="whomName svelte-1abzffh">Хрустик Михаил</span>
+    <span class="arrow svelte-1abzffh"></span></div>
   <div>Орлов Максим</div>
-</div><div class="pair  svelte-9c226o"><svg class="pair-pin svelte-9c226o" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
-  <div class="pair-whom svelte-9c226o"><span class="pair-whomName svelte-9c226o">Орлов Максим</span>
-    <span class="pair-arrow svelte-9c226o"></span></div>
+</div><div class="pair  svelte-1abzffh"><svg class="pin svelte-1abzffh" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
+  <div class="whom svelte-1abzffh"><span class="whomName svelte-1abzffh">Орлов Максим</span>
+    <span class="arrow svelte-1abzffh"></span></div>
   <div>Макриди Екатерина</div>
 </div></div>
 </main>
