deploy: 90a0eae8a873f078f8c9218e6efb95e4cfaff535

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="./favicon.png" />
+  <link rel="icon" href="./favicon.ico" sizes="16x16 24x24 32x32">
+  <link rel="icon" href="./favicon.png" sizes="48x48 64x64">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <link rel="manifest" href="/manifest.webmanifest">
   <link rel="stylesheet" href="./style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Ревью</title>
@@ -77,8 +80,8 @@
     </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">3</button>
     </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">4</button>
     </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">5</button>
-    </div><div class="day svelte-1f2gkwh  is-today"><button class="day--label svelte-1f2gkwh selected highlighted" type="button">6</button>
-    </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">7</button>
+    </div><div class="day svelte-1f2gkwh   is-disabled"><button class="day--label svelte-1f2gkwh    disabled" type="button">6</button>
+    </div><div class="day svelte-1f2gkwh  is-today"><button class="day--label svelte-1f2gkwh selected highlighted" type="button">7</button>
     </div>
 </div><div class="week svelte-1f2gkwh"><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">8</button>
     </div><div class="day svelte-1f2gkwh"><button class="day--label svelte-1f2gkwh" type="button">9</button>
@@ -129,23 +132,23 @@
   <div class="pairs  svelte-c1xe7s"><div class="pair  svelte-1abzffh"><svg class="pin svelte-1abzffh" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="whom svelte-1abzffh"><span class="whomName svelte-1abzffh">Макриди Екатерина</span>
     <span class="arrow svelte-1abzffh"></span></div>
-  <div>Туичиев Алексей</div>
+  <div>Колодько Денис</div>
 </div><div class="pair  svelte-1abzffh"><svg class="pin svelte-1abzffh" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="whom svelte-1abzffh"><span class="whomName svelte-1abzffh">Туичиев Алексей</span>
     <span class="arrow svelte-1abzffh"></span></div>
-  <div>Колодько Денис</div>
+  <div>Хрустик Михаил</div>
 </div><div class="pair  svelte-1abzffh"><svg class="pin svelte-1abzffh" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="whom svelte-1abzffh"><span class="whomName svelte-1abzffh">Колодько Денис</span>
     <span class="arrow svelte-1abzffh"></span></div>
-  <div>Хрустик Михаил</div>
+  <div>Орлов Максим</div>
 </div><div class="pair  svelte-1abzffh"><svg class="pin svelte-1abzffh" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="whom svelte-1abzffh"><span class="whomName svelte-1abzffh">Хрустик Михаил</span>
     <span class="arrow svelte-1abzffh"></span></div>
-  <div>Орлов Максим</div>
+  <div>Макриди Екатерина</div>
 </div><div class="pair  svelte-1abzffh"><svg class="pin svelte-1abzffh" fill="none" height="29" viewBox="0 0 18 29" width="13"><path d="m14.6549 14.2994v-10.97154h1.3715v-2.742899h-13.71452v2.742899h1.37145v10.97154l-2.7429 2.7429v2.7429h7.13153v8.2287h2.19434v-8.2287h7.1315v-2.7429zm-9.87442 2.7429 1.64574-1.6457v-12.06874h5.48578v12.06874l1.6457 1.6457z"></path></svg>
   <div class="whom svelte-1abzffh"><span class="whomName svelte-1abzffh">Орлов Максим</span>
     <span class="arrow svelte-1abzffh"></span></div>
-  <div>Макриди Екатерина</div>
+  <div>Туичиев Алексей</div>
 </div></div>
 </main>
 
